Fix list on small screens

--- a/_styles/main.less
+++ b/_styles/main.less
@@ -401,11 +401,11 @@ ul.icon-list {
     padding: 0 10px;
     li {
         display: flex;
-        align-items: center;
     }
     svg {
-        margin-right: 0.5rem;
-        min-width: 1.2rem;
+        margin-top: 0.5rem;
+        margin-right: 1rem;
+        min-width: 1rem;
         flex-shrink: 0;
     }
 }
